--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to xudailong's blog </h1>
-        <small>这里是我的个人IT学习小天地</small>
+        <h1>Welcome to William-Zhan's blog </h1>
+        <small>你以为我是一个程序猿，其实我还是工大刘昊然</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
